@@ -1,3 +1,7 @@
+2011-05-19      Stephan Linz <linz@li-pro.net>
+
+	* xlbsp: migrate to ptxdist-2011.05.0: mv xlbsp to platforms/xlbsp
+
 2011-01-25	Stephan Linz <linz@li-pro.net>
 
 	* platform: upgrade to linux-2.6.31.13 with s2imac support
